--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="/usr/share/java/postgresql-jdbc4.jar"/>
+	<classpathentry kind="lib" path="/usr/share/java/logback-classic.jar"/>
+	<classpathentry kind="lib" path="/usr/share/java/logback-core.jar"/>
+	<classpathentry kind="lib" path="/home/Ihc/研究計劃/意泉計劃/程式碼/cal10n-api-0.7.4.jar"/>
+	<classpathentry kind="lib" path="/home/Ihc/研究計劃/意泉計劃/程式碼/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="/home/Ihc/研究計劃/意泉計劃/程式碼/slf4j-ext-1.7.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
