--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     compile group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.8'
     compile group: 'org.apache.xmlgraphics', name: 'batik-dom', version: '1.8'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.0.M0'
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.0.M0'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.2.17.v20160517'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.2.17.v20160517'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
