加`文件.漢字.意傳.台灣`的cname

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "deploy": "./gradlew javadoc && gh-pages -d build/docs/javadoc/"
+    "deploy": "./gradlew javadoc && (echo 'xn--5nqy36c.xn--p8s937b.xn--v0qr21b.xn--kpry57d' > build/docs/javadoc/CNAME) && gh-pages -d build/docs/javadoc/"
   },
   "dependencies": {
   },
