嘗試使用 codecov 計算測試覆蓋度
這樣應該可以看到哪些代碼沒有被測試到

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 sudo: false
 language: java
 jdk:
-- openjdk7
+  - openjdk7
 branches:
   only:
-  - master
+    - master
 
+before_script:
+  - chmod +x gradlew
+script:
+  - ./gradlew check
+  - ./gradlew codeCoverageReport
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
