--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,8 @@ branches:
   only:
     - master
 
-before_script:
-  - chmod +x gradlew
 script:
-  - ./gradlew check
-  - ./gradlew jacocoTestReport
+  - gradle check
+  - gradle jacocoTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
