install 也用新 gradle。find 看看怎麼 cache 好。

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ jdk:
 branches:
   only:
     - master
-
+install:
+  - gradle assemble
 script:
   - gradle check
   - gradle jacocoTestReport
+  - find "$HOME/.gradle" -type d -maxdepth 4
 after_success:
   - bash <(curl -s https://codecov.io/bash)
