--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,18 @@ jdk:
 branches:
   only:
     - master
+
 install:
   - gradle assemble
 script:
   - gradle check
   - gradle jacocoTestReport
-  - find "$HOME/.gradle" -type d -maxdepth 4
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
